# robotic_systems_ws

./: .dockerignore  .gitignore  README.md  requirements.txt
Docker/: Dockerfile  build_container.sh  entrypoint.sh  run_container.sh
data/: README.md
deployment/: build_container.sh  run_container.sh
deployment/Docker/: Dockerfile  entrypoint.sh
src/gazebo_control/: CMakeLists.txt  package.xml
src/gazebo_control/config/: initial_positions.yaml
src/gazebo_control/launch/: ur5.launch.py  ur5.launch.xml  ur_sim_control.launch.py
src/gazebo_control/model/: model.sdf  model.urdf
src/gazebo_control/scripts/: set_initial_position.py
src/six_dof_arm/: package.xml
src/ur5_controller/: CMakeLists.txt  package.xml
src/ur5_controller/include/ur5_controller/: ur5_controller.hpp
src/ur5_controller/src/: ur5_controller.cpp
src/ur5_interface/: CMakeLists.txt  package.xml
src/ur5_interface/action/: MoveToPose.action
src/ur5_interfaces/: CMakeLists.txt  package.xml
src/ur5_machine_learning/: package.xml  setup.cfg  setup.py
src/ur5_machine_learning/ur5_machine_learning/: dataset_generator_node.py
src/ur5_motion_planner/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ur5_motion_planner/config/: rl_config.yaml
src/ur5_motion_planner/scripts/: switch_algorithm.py
src/ur5_motion_planner/src/: ur5_ik.cpp
src/ur5_motion_planner/ur5_motion_planner/: config_loader.py  dataset_generator_node.py  env_node.py  evaluate.py  evaluate_ik.py  evaluate_rl.py  ik_motion_planner.py  reinforce_env.py  trainer.py  validator.py
src/ur_pick_and_place/: package.xml
