<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_machine_learning</name>
  <version>0.0.0</version>
  <description>UR5 robot IK solution with machine learning</description>
  <maintainer email="ivonluizgarcia@gmail.com">root</maintainer>
  <license>Apache License 2.0</license>

  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-argparse</exec_depend>
  <exec_depend>python3-csv</exec_depend>
  
  <!-- ROS 2 core dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  
  <!-- TF2 dependencies -->
  <exec_depend>tf2_ros_py</exec_depend>
  
  <!-- Additional ROS dependencies -->
  <exec_depend>control_msgs</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>